Added edit functionality to product create modal

--- a/src/assets/scss/Products/CreateEditProductsModal.scss
+++ b/src/assets/scss/Products/CreateEditProductsModal.scss
@@ -1,4 +1,4 @@
-.create-product-modal {
+.create-edit-product-modal {
     .p-dialog-content {
         .inputs-container {
             display: flex;
