ListProducts initial stylization

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -16,3 +16,4 @@ body {
 @import url("./Login/Login.scss");
 @import url("./Register/Register.scss");
 @import url("./Products/CreateEditProductsModal.scss");
+@import url("./Products/ListProducts.scss");
