Added suppliers screen and initial add edit supplier modal

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -17,3 +17,5 @@ body {
 @import url("./Register/Register.scss");
 @import url("./Products/CreateEditProductsModal.scss");
 @import url("./Products/ListProducts.scss");
+@import url("./Suppliers/CreateEditSuppliersModal.scss");
+@import url("./Suppliers/ListSuppliers.scss");
