--- a/src/assets/scss/IMSidebar/IMSidebar.scss
+++ b/src/assets/scss/IMSidebar/IMSidebar.scss
@@ -1,150 +1,142 @@
 aside {
   position: fixed;
-  display: flex;
-  flex-direction: column;
-  background-color: #325F7B;
-  color: #FFFCF5;
-  width: calc(2rem + 32px);
-  overflow: hidden;
-  height: 100%;
-  padding: 1rem;
-  transition: 0.2s ease-in-out;
+	display: flex;
+	flex-direction: column;
 
-  .flex {
-    flex: 1 1 0%;
-  }
+	background-color: var(--lapis-lazuli);
+	color: var(--floral-white);
 
-  .menu-toggle-wrap {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 1rem;
-    transition: 0.2s ease-in-out;
-    position: relative;
+	width: calc(2rem + 32px);
+	overflow: hidden;
+	height: 100%;
+	padding: 1rem;
 
-    cursor: pointer;
+	transition: 0.2s ease-in-out;
 
-    .menu-toggle {
-      transition: 0.2s ease-in-out;
+	.flex {
+		flex: 1 1 0%;
+	}
 
-      .material-icons {
-        font-size: 2rem;
-        color: white;
-        transition: 0.2s ease-out;
-      }
+	.logo {
+		margin-bottom: 1rem;
 
-      &:hover {
-        
-        .material-icons {
-          color: #325F7B;
-          transform: translateX(0.5rem);
-        }
-      }
+		.logo-icon {
+      font-size: 2rem;
+		}
+	}
+
+	.menu-toggle-wrap {
+		display: flex;
+		justify-content: flex-end;
+		margin-bottom: 1rem;
+
+		position: relative;
+		top: 0;
+		transition: 0.2s ease-in-out;
+
+    .material-icons {
+      cursor: pointer;
     }
-  }
+	}
 
-  h3,
-  .button .text {
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-  }
+	h3, .button .text {
+		opacity: 0;
+		transition: opacity 0.3s ease-in-out;
+	}
 
-  h3 {
-    color: grey;
-    font-size: 0.875rem;
-    margin-bottom: 0.5rem;
-    text-transform: uppercase;
-  }
+	h3 {
+		color: var(--light-grey);
+		font-size: 0.875rem;
+		margin-bottom: 0.5rem;
+		text-transform: uppercase;
+	}
 
-  .menu {
-    margin: 0 -1rem;
+	.menu {
+		margin: 0 -1rem;
 
-    .button {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      transition: 0.2s ease-in-out;
-      padding: 0.5rem 1rem;
+		.button {
+			display: flex;
+			align-items: center;
+			text-decoration: none;
 
-      .material-icons {
-        font-size: 2rem;
-        color: #FFFCF5;
-        transition: 0.2s ease-in-out;
-      }
-      
-      .text {
-        color: #FFFCF5;
-        transition: 0.2s ease-in-out;
-      }
+			transition: 0.2s ease-in-out;
+			padding: 0.5rem 1rem;
 
-      &:hover {
-        background-color: #FFFCF5;
-        color: #325F7B;
+			.material-icons {
+				font-size: 2rem;
+				color: var(--floral-white);
+				transition: 0.2s ease-in-out;
+			}
+			.text {
+				color: var(--floral-white);
+				transition: 0.2s ease-in-out;
+			}
 
-        .material-icons,
-        .text {
-          color: #325F7B;
-        }
-      }
+			&:hover {
+				background-color: var(--floral-white);
 
-      &.router-link-exact-active {
-        border-right: 5px solid #FFFCF5;
+				.material-icons, .text {
+					color: var(--lapis-lazuli);
+				}
+			}
 
-        .material-icons,
-        .text {
-          color: #FFFCF5;
-        }
+			&.router-link-exact-active {
+				border-right: 5px solid var(--floral-white);
+
+				.material-icons, .text {
+					color: var(--floral-white);
+				}
 
         &:hover {
-          color: #325F7B;
+          color: var(--lapis-lazuli);
 
           .material-icons,
           .text {
-            color: #325F7B;
+            color: var(--lapis-lazuli);
           }
         }
-      }
-    }
-  }
+			}
+		}
+	}
 
-  .footer {
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+	.footer {
+		opacity: 0;
+		transition: opacity 0.3s ease-in-out;
 
-    p {
-      font-size: 0.875rem;
-      color: var(--grey);
-    }
-  }
+		p {
+			font-size: 0.875rem;
+			color: var(--grey);
+		}
+	}
 
-  &.is-expanded {
-    width: 250px;
+	&.is-expanded {
+		width: 250px;
 
-    .menu-toggle-wrap {
-      top: -3rem;
+		.menu-toggle-wrap {
+			top: -2rem;
+			
+			.menu-toggle {
+				transform: rotate(-180deg);
+			}
+		}
 
-      .menu-toggle {
-        transform: rotate(-180deg);
-      }
-    }
+		h3, .button .text {
+			opacity: 1;
+		}
 
-    h3,
-    .button .text {
-      opacity: 1;
-    }
+		.button {
+			.material-icons {
+				margin-right: 1rem;
+			}
+		}
 
-    .button {
-      .material-icons {
-        margin-right: 1rem;
-      }
-    }
+		.footer {
+			opacity: 0;
+		}
+	}
 
-    .footer {
-      opacity: 0;
-    }
-  }
-
-  @media (max-width: 1024px) {
-    position: absolute;
-    z-index: 99;
-  }
+	@media (max-width: 1024px) {
+		position: absolute;
+		z-index: 99;
+	}
 }
