--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -11,8 +11,11 @@ body {
 .app {
   height: 100%;
   .main-container {
-    margin-left: calc(2rem + 32px);
-    transition: 0.2s ease-in-out;
+    &.is-logged-in {
+      margin-left: calc(2rem + 32px);
+      transition: 0.2s ease-in-out;
+
+    }
 
     &.is-expanded {
       margin-left: 250px;
@@ -21,6 +24,7 @@ body {
   }
 }
 
+@import url("./colors.scss");
 @import url("./IMSidebar/IMSidebar.scss");
 @import url("./Login/Login.scss");
 @import url("./Register/Register.scss");
