refactor: Minor code organization changes

--- a/src/assets/scss/IMSidebar/IMSidebar.scss
+++ b/src/assets/scss/IMSidebar/IMSidebar.scss
@@ -1,91 +1,95 @@
 aside {
   position: fixed;
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-	background-color: var(--lapis-lazuli);
-	color: var(--floral-white);
+  background-color: var(--lapis-lazuli);
+  color: var(--floral-white);
 
-	width: calc(2rem + 32px);
-	overflow: hidden;
-	height: 100%;
-	padding: 1rem;
+  width: calc(2rem + 2rem);
+  overflow: hidden;
+  height: 100%;
+  padding: 1rem;
 
-	transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 
-	.flex {
-		flex: 1 1 0%;
-	}
+  .flex {
+    flex: 1 1 0%;
+  }
 
-	.logo {
-		margin-bottom: 1rem;
+  .logo {
+    margin-bottom: 1rem;
 
-		.logo-icon {
+    .logo-icon {
       font-size: 2rem;
-		}
-	}
+    }
+  }
 
-	.menu-toggle-wrap {
-		display: flex;
-		justify-content: flex-end;
-		margin-bottom: 1rem;
+  .menu-toggle-wrap {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
 
-		position: relative;
-		top: 0;
-		transition: 0.2s ease-in-out;
+    position: relative;
+    top: 0;
+    transition: 0.2s ease-in-out;
 
     .material-icons {
       cursor: pointer;
     }
-	}
+  }
 
-	h3, .button .text {
-		opacity: 0;
-		transition: opacity 0.3s ease-in-out;
-	}
+  h3,
+  .button .text {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
 
-	h3 {
-		color: var(--light-grey);
-		font-size: 0.875rem;
-		margin-bottom: 0.5rem;
-		text-transform: uppercase;
-	}
+  h3 {
+    color: var(--light-grey);
+    font-size: 0.875rem;
+    margin-bottom: 0.5rem;
+    text-transform: uppercase;
+  }
 
-	.menu {
-		margin: 0 -1rem;
+  .menu {
+    margin: 0 -1rem;
 
-		.button {
-			display: flex;
-			align-items: center;
-			text-decoration: none;
+    .button {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
 
-			transition: 0.2s ease-in-out;
-			padding: 0.5rem 1rem;
+      transition: 0.2s ease-in-out;
+      padding: 0.5rem 1rem;
 
-			.material-icons {
-				font-size: 2rem;
-				color: var(--floral-white);
-				transition: 0.2s ease-in-out;
-			}
-			.text {
-				color: var(--floral-white);
-				transition: 0.2s ease-in-out;
-			}
+      .material-icons {
+        font-size: 2rem;
+        color: var(--floral-white);
+        transition: 0.2s ease-in-out;
+      }
 
-			&:hover {
-				background-color: var(--floral-white);
+      .text {
+        color: var(--floral-white);
+        transition: 0.2s ease-in-out;
+      }
 
-				.material-icons, .text {
-					color: var(--lapis-lazuli);
-				}
-			}
+      &:hover {
+        background-color: var(--floral-white);
 
-			&.router-link-exact-active {
-				border-right: 5px solid var(--floral-white);
+        .material-icons,
+        .text {
+          color: var(--lapis-lazuli);
+        }
+      }
 
-				.material-icons, .text {
-					color: var(--floral-white);
-				}
+      &.router-link-exact-active {
+        border-right: 5px solid var(--floral-white);
+
+        .material-icons,
+        .text {
+          color: var(--floral-white);
+        }
 
         &:hover {
           color: var(--lapis-lazuli);
@@ -95,48 +99,35 @@ aside {
             color: var(--lapis-lazuli);
           }
         }
-			}
-		}
-	}
+      }
+    }
+  }
 
-	.footer {
-		opacity: 0;
-		transition: opacity 0.3s ease-in-out;
+  &.is-expanded {
+    width: 15.625rem;
 
-		p {
-			font-size: 0.875rem;
-			color: var(--grey);
-		}
-	}
+    .menu-toggle-wrap {
+      top: -2rem;
 
-	&.is-expanded {
-		width: 250px;
+      .menu-toggle {
+        transform: rotate(-180deg);
+      }
+    }
 
-		.menu-toggle-wrap {
-			top: -2rem;
-			
-			.menu-toggle {
-				transform: rotate(-180deg);
-			}
-		}
+    h3,
+    .button .text {
+      opacity: 1;
+    }
 
-		h3, .button .text {
-			opacity: 1;
-		}
+    .button {
+      .material-icons {
+        margin-right: 1rem;
+      }
+    }
+  }
 
-		.button {
-			.material-icons {
-				margin-right: 1rem;
-			}
-		}
-
-		.footer {
-			opacity: 0;
-		}
-	}
-
-	@media (max-width: 1024px) {
-		position: absolute;
-		z-index: 99;
-	}
+  @media (max-width: 1024px) {
+    position: absolute;
+    z-index: 99;
+  }
 }
