--- a/src/assets/scss/Products/ListProducts.scss
+++ b/src/assets/scss/Products/ListProducts.scss
@@ -1,34 +1,57 @@
 .list-products {
   overflow: hidden;
+  padding: 1.875rem;
 
   h1 {
-    margin-bottom: 4px;
-    margin-top: 4px;
-    font-weight: 500;
-    color: #334155
+    margin-bottom: 0.25rem;
+    margin-top: 0.25rem;
+    font-weight: 700;
+    color: var(--lapis-lazuli);
+    padding-left: 1rem
   }
+
   .p-datatable {
     .p-datatable-header {
       display: flex;
       width: 100%;
-      margin-bottom: 4px;
+      margin-bottom: 0.25rem;
 
       .header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         flex: 1;
-        gap: 8px;  
+        gap: 0.5rem;  
 
           .header-buttons {
             display: flex;
             align-items: flex-end;
-            gap: 16px;
+            gap: 1rem;
     
             .p-button {
               display: flex;
               width: 100%;
               height: 80%;
+            }
+
+            .add-button {
+              background-color: var(--ocean-green);
+
+              &:hover {
+                opacity: 90%;
+                cursor: pointer;
+                transition: 0.2s ease-in-out;
+              }
+            }
+
+            .delete-multiple-button {
+              background-color: var(--stiletto-red);
+
+              &:hover {
+                opacity: 90%;
+                cursor: pointer;
+                transition: 0.2s ease-in-out;
+              }
             }
           }
 
@@ -49,7 +72,7 @@
             tr {
                 td:last-child {
                     display: flex;
-                    gap: 8px;
+                    gap: 0.5rem;
                 }
             }
 
