feat: Initial dashboard informations with mocked values

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -28,4 +28,5 @@ body {
 @import url("./Products/ListProducts.scss");
 @import url("./Suppliers/CreateEditSuppliersModal.scss");
 @import url("./Suppliers/ListSuppliers.scss");
-@import url("./IMComponents/IMButton.scss")
+@import url("./IMComponents/IMButton.scss");
+@import url("./Dashboard/Dashboard.scss");
