--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -10,7 +10,7 @@
     --grey: grey;
     --light-grey: lightgrey;
     --black: black;
-    --link-water: #F7F7FD
+    --link-water: #F7F7FD;
 
     --button-success: var(--ocean-green);
     --button-success-hover: var(--amazon-green);
